# order_book_server

./: AGENTS.md  Cargo.toml  NEW.md  README.md  justfile
binaries/: Cargo.toml
server/: Cargo.toml
server/src/: lib.rs  prelude.rs
server/src/listeners/: directory.rs  mod.rs
server/src/listeners/order_book/: mod.rs  parallel.rs  state.rs  utils.rs
server/src/order_book/: levels.rs  linked_list.rs  mod.rs  multi_book.rs  types.rs
server/src/servers/: websocket_server.rs
server/src/types/: inner.rs  mod.rs  subscription.rs
