[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
axum = { version = "0.8.4" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
notify = "8.0.0"
slab = "0.4"
itertools = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.31"
rayon = "1.10"
alloy = { version = "1.0.22", default-features = false, features = ["std", "serde", "reqwest-rustls-tls", "full"] }
strum_macros = "0.27.2"
yawc = { version = "0.2.6", features = ["axum"] }
clap = { version = "4", features = ["derive"] }
dirs = "6.0"
crossbeam-channel = "0.5"
sonic-rs = "0.3"

[lints]
workspace = true
